force-app/main/default/objects/B2B_Customer__c/B2B_Customer__c.object-meta.xml
<CustomObject>
    <label>B2B Customer</label>
    <nameField>
        <label>B2B Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>