force-app/main/default/objects/B2B_Customer__c/fields/Account_Opened_Since32__c.field-meta.xml
<CustomField>
    <fullName>Account_Opened_Since32__c</fullName>
    <label>Account Opened Since32</label>
    <type>Date</type>
</CustomField>