force-app/main/default/objects/B2B_Customer__c/fields/Account_Opened_Since33__c.field-meta.xml
<CustomField>
    <fullName>Account_Opened_Since33__c</fullName>
    <label>Account Opened Since33</label>
    <type>Date</type>
</CustomField>