force-app/main/default/objects/B2B_Customer__c/fields/Account_OpenedSince31__c.field-meta.xml
<CustomField>
    <fullName>Account_OpenedSince31__c</fullName>
    <label>Account OpenedSince31</label>
    <type>Date</type>
</CustomField>