force-app/main/default/objects/B2B_Customer__c/fields/Address31__c.field-meta.xml
<CustomField>
    <fullName>Address31__c</fullName>
    <label>Address31</label>
    <type>Address</type>
</CustomField>