force-app/main/default/objects/B2B_Customer__c/fields/Address32__c.field-meta.xml
<CustomField>
    <fullName>Address32__c</fullName>
    <label>Address32</label>
    <type>Address</type>
</CustomField>