force-app/main/default/objects/B2B_Customer__c/fields/Address33__c.field-meta.xml
<CustomField>
    <fullName>Address33__c</fullName>
    <label>Address33</label>
    <type>Address</type>
</CustomField>