force-app/main/default/objects/B2B_Customer__c/fields/Company_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_Address__c</fullName>
    <label>Company Billing Address</label>
    <type>Address</type>
</CustomField>