force-app/main/default/objects/B2B_Customer__c/fields/Company_Name31__c.field-meta.xml
<CustomField>
    <fullName>Company_Name31__c</fullName>
    <label>Company Name31</label>
    <length>20</length>
    <type>Text</type>
</CustomField>