force-app/main/default/objects/B2B_Customer__c/fields/Company_Name32__c.field-meta.xml
<CustomField>
    <fullName>Company_Name32__c</fullName>
    <label>Company Name32</label>
    <length>20</length>
    <type>Text</type>
</CustomField>