force-app/main/default/objects/B2B_Customer__c/fields/Company_Name33__c.field-meta.xml
<CustomField>
    <fullName>Company_Name33__c</fullName>
    <label>Company Name33</label>
    <length>20</length>
    <type>Text</type>
</CustomField>