force-app/main/default/objects/B2B_Customer__c/fields/Credit_Limit31__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit31__c</fullName>
    <label>Credit Limit31</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>