force-app/main/default/objects/B2B_Customer__c/fields/Credit_Limit32__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit32__c</fullName>
    <label>Credit Limit32</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>