force-app/main/default/objects/B2B_Customer__c/fields/Current_Balance32__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance32__c</fullName>
    <label>Current Balance32</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>