force-app/main/default/objects/B2B_Customer__c/fields/Current_Balance33__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance33__c</fullName>
    <label>Current Balance33</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>