force-app/main/default/objects/B2B_Customer__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date Business Commenced</label>
    <type>Date</type>
</CustomField>