force-app/main/default/objects/B2B_Customer__c/fields/DNB_Number__c.field-meta.xml
<CustomField>
    <fullName>DNB_Number__c</fullName>
    <label>DNB Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>