force-app/main/default/objects/B2B_Customer__c/fields/E_mail31__c.field-meta.xml
<CustomField>
    <fullName>E_mail31__c</fullName>
    <label>E-mail31</label>
    <type>Email</type>
</CustomField>