force-app/main/default/objects/B2B_Customer__c/fields/E_mail32__c.field-meta.xml
<CustomField>
    <fullName>E_mail32__c</fullName>
    <label>E-mail32</label>
    <type>Email</type>
</CustomField>