force-app/main/default/objects/B2B_Customer__c/fields/E_mail33__c.field-meta.xml
<CustomField>
    <fullName>E_mail33__c</fullName>
    <label>E-mail33</label>
    <type>Email</type>
</CustomField>