force-app/main/default/objects/B2B_Customer__c/fields/E_mail_Billing__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Billing__c</fullName>
    <label>E-mail-Billing</label>
    <type>Email</type>
</CustomField>