force-app/main/default/objects/B2B_Customer__c/fields/E_mail_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Purchasing__c</fullName>
    <label>E-mail-Purchasing</label>
    <type>Email</type>
</CustomField>