force-app/main/default/objects/B2B_Customer__c/fields/How_long_at_current_address__c.field-meta.xml
<CustomField>
    <fullName>How_long_at_current_address__c</fullName>
    <label>How long at current address?</label>
    <type>TextArea</type>
</CustomField>