force-app/main/default/objects/B2B_Customer__c/fields/Other_Loan__c.field-meta.xml
<CustomField>
    <fullName>Other_Loan__c</fullName>
    <label>Other Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>