force-app/main/default/objects/B2B_Customer__c/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <label>Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>