force-app/main/default/objects/B2B_Customer__c/fields/Phone31__c.field-meta.xml
<CustomField>
    <fullName>Phone31__c</fullName>
    <label>Phone31</label>
    <type>Phone</type>
</CustomField>