force-app/main/default/objects/B2B_Customer__c/fields/Phone32__c.field-meta.xml
<CustomField>
    <fullName>Phone32__c</fullName>
    <label>Phone32</label>
    <type>Phone</type>
</CustomField>