force-app/main/default/objects/B2B_Customer__c/fields/Primary_Finance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Finance_Contact__c</fullName>
    <label>Primary Finance Contact</label>
    <type>Phone</type>
</CustomField>