force-app/main/default/objects/B2B_Customer__c/fields/State_Providence__c.field-meta.xml
<CustomField>
    <fullName>State_Providence__c</fullName>
    <label>State/Providence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>