force-app/main/default/objects/B2B_Customer__c/fields/Tax_I_D_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_I_D_Number__c</fullName>
    <label>Tax I.D. Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>